--- a/webmapping/index.html
+++ b/webmapping/index.html
@@ -19,24 +19,45 @@
     </h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
-      var vectorServer = "http://localhost:7800";
-      var vectorSourceLayer = "/hippo.capcog_city_limits";
-      var vectorProps = "?properties=city";
-      var vectorUrl = vectorServer + vectorSourceLayer + "/{z}/{x}/{y}.pbf" + vectorProps;
+      var vectorServer = "http://localhost:7800/";
+      var vectorLinePolySourceLayer = "public.sp";
+      var vectorLinePolyProps = "?properties=name";
+      var vectorLinePolyUrl = vectorServer + vectorLinePolySourceLayer + "/{z}/{x}/{y}.pbf" + vectorLinePolyProps;
+      var vectorPointSourceLayer = "public.airports";
+      var vectorPointProps = "?properties=name";
+      var vectorPointUrl = vectorServer + vectorPointSourceLayer + "/{z}/{x}/{y}.pbf" + vectorPointProps;
 
-      var vectorStyle = new ol.style.Style({
+      var vectorPointStyle = new ol.style.Style({
+          image: new ol.style.Circle({
+              radius: 5,
+              fill: new ol.style.Fill({color: 'black'}),
+              stroke: new ol.style.Stroke({
+                color: [255,0,0], width: 2
+              })
+          }),
+      });
+      
+      var vectorLinePolyStyle = new ol.style.Style({
           stroke: new ol.style.Stroke({
               width: 2,
               color: "#000000",
           }),
       });
 
-      var vectorLayer = new ol.layer.VectorTile({
+      var vectorLinePolyLayer = new ol.layer.VectorTile({
           source: new ol.source.VectorTile({
               format: new ol.format.MVT(),
-              url: vectorUrl,
+              url: vectorLinePolyUrl,
           }),
-          style: vectorStyle,
+          style: vectorLinePolyStyle,
+      });
+
+      var vectorPointLayer = new ol.layer.VectorTile({
+          source: new ol.source.VectorTile({
+              format: new ol.format.MVT(),
+              url: vectorPointUrl,
+          }),
+          style: vectorPointStyle,
       });
 
       var map = new ol.Map({
@@ -45,7 +66,8 @@
           new ol.layer.Tile({
             source: new ol.source.OSM()
           }),
-          vectorLayer
+          vectorLinePolyLayer,
+          vectorPointLayer
         ],
         view: new ol.View({
           center: ol.proj.fromLonLat([-97.8, 30.4]),
